<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/nav_bar_search"
        app:iconTint="@color/pacYellow"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:iconTint="@color/pacYellow"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lock_app"
        android:orderInCategory="200"
        android:title="@string/action_lock_app"
        app:iconTint="@color/pacYellow"
        app:showAsAction="never" />
</menu>
