<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MasternodesAboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mn_about_app_logo"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/karla_bold"
            android:text="@string/mn_about_app_version"
            android:textAlignment="center"
            android:textColor="@color/pacBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mn_about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/karla_regular"
            android:text="@string/mn_about_app_version_number"
            android:textAlignment="center"
            android:textColor="@color/pacBlack"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mn_about_pac_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:autoLink="web"
                android:fontFamily="@font/karla_regular"
                android:linksClickable="true"
                android:text="@string/mn_about_app_web_page_link"
                android:textAlignment="center"
                android:textColor="@color/pacBlack"
                android:textColorLink="@color/pacBlack"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>